--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.5.7
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -8,6 +9,7 @@ importlib-metadata==4.6.4
 jira==3.0.1
 keyring==23.1.0
 oauthlib==3.1.1
+pycodestyle==2.7.0
 pycparser==2.20
 PyGithub==1.55
 PyJWT==2.1.0
@@ -17,6 +19,7 @@ requests==2.26.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
 six==1.16.0
+toml==0.10.2
 urllib3==1.26.6
 wrapt==1.12.1
 zipp==3.5.0
