--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,13 @@ importlib-metadata==4.6.4
 jira==3.0.1
 keyring==23.1.0
 oauthlib==3.1.1
+pasteboard==0.3.3
 pycodestyle==2.7.0
 pycparser==2.20
 PyGithub==1.55
 PyJWT==2.1.0
 PyNaCl==1.4.0
+pyperclip3==0.4.1
 python-dotenv==0.19.0
 requests==2.26.0
 requests-oauthlib==1.3.0
